remove dedup
Signed-off-by: Ali Zhagparov <alijakparov.kz@gmail.com>